test/ui/test/lengthy-type-mismatch.stderr
error[E032]: type mismatch
   ┌─ ${DISTRIBUTED_LIBRARIES_FOLDER}/core/source/library/tuple.lushui:11:14
   │
11 │         A -> Tuple L -> Tuple (list.prepend Type A L)
   │              ─────── expected due to this
   │
   ├─ ${TEST_FOLDER}/lengthy-type-mismatch.lushui:20:39
   │
20 │               (identity Unit Unit.unit) (Tuple.prepend
   · ╔═══════════════════════════════════════╝
22 │ ║                     Tuple.empty))
   │ ╚════════════════════════════════╝ has the wrong type
   │
  note: expected type ‘extern.core.tuple.Tuple (extern.core.list.List.prepend extern.core.type.Type extern.core.type.Type (extern.core.list.List.empty extern.core.type.Type))’
         but got type ‘extern.core.tuple.Tuple (extern.core.list.List.prepend extern.core.type.Type extern.core.int.Int (extern.core.list.List.empty extern.core.type.Type))’

error: aborting due to previous error

