test/ui/test/lengthy-type-mismatch.lushui
use extern.core.(
    type.Type
    tuple.Tuple
    list.List
    int.Int
    unit.Unit
    function.identity
    )

it: Tuple (
    List.prepend Type Int
    (List.prepend Type Unit
    (List.prepend Type Int
        (List.empty Type))))
    =
    Tuple.prepend
        Int (List.prepend Type Unit (List.prepend Type Int (List.empty Type)))
        Int.-87 (Tuple.prepend
            Unit (List.prepend Type Type (List.empty Type))
            (identity Unit Unit.unit) (Tuple.prepend
                Int (List.empty Type) Int.91
                    Tuple.empty))
